# marzneshin

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.preview  README.md  alembic.ini  config.py  docker-compose.dev.yml  docker-compose.yml  install_service.sh  main.py  makefile  marzban-cli.py  marzneshin-cli.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  script.sh  xray_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  feature_story.md
.github/workflows/: api-ci.yml  api-codeql.yml  chromatic-deploy.yml  chromatic.yml  codeql.yml  dashboard-ci.yml  dashboard-codeql.yml  json-check.yml  migration.yml  node.js.yml  package.yml  pr-alerts.yml  pr_validation.yml  pytest.yml  release.yml  translations.yml  ui-change.yml
app/: __init__.py  dependencies.py  marzneshin.py  webhooks.py
app/config/: __init__.py  db.py  env.py
app/dashboard/: .eslintignore  .eslintrc.js  .eslintrc.json  .prettierignore  README.md  (+6 more)
cli/: admin.py  subscription.py  user.py  utils.py
dashboard/: .eslintrc.cjs  PERSIAN_CALENDAR_README.md  biome.json  chromatic.config.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
mnode/: service_grpc.py  service_pb2.py
tests/: test_migrations.py
tools/: check_translations.sh  dashboard-build.sh  dashboard-run-dev.sh  service-install.sh  xray-install.sh
xray_api/: base.py  exceptions.py  proxyman.py  stats.py
(+1483 files in other folders)
